TrialoftheTitansPackage/main/default/objects/Certification__c/fields/Assessor__c.field-meta.xml
<CustomField>
    <fullName>Assessor__c</fullName>
    <label>Assessor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>