TrialoftheTitansPackage/main/default/objects/Certification__c/fields/Certification_Exam__c.field-meta.xml
<CustomField>
    <fullName>Certification_Exam__c</fullName>
    <label>Certification Exam</label>
    <referenceTo>Certification_Exam__c</referenceTo>
    <relationshipLabel>Certifications</relationshipLabel>
    <relationshipName>Certifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>