TrialoftheTitansPackage/main/default/objects/Certification__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image URL</label>
    <length>140</length>
    <type>Text</type>
</CustomField>