TrialoftheTitansPackage/main/default/objects/Certification__c/fields/Verification_Site__c.field-meta.xml
<CustomField>
    <fullName>Verification_Site__c</fullName>
    <label>Verification Site</label>
    <length>60</length>
    <type>Text</type>
</CustomField>